# pymsys

./: README.md  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  tag_release.yml
src/: __init__.py
src/pymsys/: __init__.py  child_list.py  connectable.py  example.py  helpers.py  link.py  metadata.py  module.py  option.py  server.py
src/pymsys/connectables/: __init__.py  connectable.py
src/pymsys/generators/: __init__.py  connectable_generator.py  counter_generator.py  generator.py  uuid_generator.py
src/pymsys/interfaces/: __init__.py  iconnectable.py  iconnection.py  igenerator.py  ilink.py  imeta.py  imetadata.py  inode.py  ioption.py  iserializer.py  isetable.py  iupdatable.py  ivalue.py
src/pymsys/lists/: __init__.py  child_list.py  uchild_list.py
src/pymsys/nodes/: __init__.py  example.py  node.py
src/pymsys/options/: option.py
src/pymsys/scripts/: __init__.py
src/pymsys/values/: value.py
tests/: conftest.py  test_basics.py  test_child_list.py  test_connectable.py  test_example.py  test_option.py
