[metadata]
name = MSYS
version = attr: pymsys.__version__
url = https://github.com/willi-z/pymsys
project_urls =
    Source Code = https://github.com/willi-z/pymsys
    Issue Tracker = https://github.com/willi-z/pymsys/issues/

license = BSD-3-Clause
author = WILLI Zschiebsch


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymsys = pymsys.scripts:pymsys
msys.modules =
    example = pymsys.example:example


[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    pymsys
    tests

[coverage:paths]
source =
    src